--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
-  },
-  "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "start": "node dist/index.js",
+    "clean": "rimraf dist",
+    "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^20.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   },
-  "main": "dist/src/{index.js,functions/*.js}"
+  "main": "dist/src/{index.js,functions/*.js}",
+  "dependencies": {
+    "@azure/cosmos": "^4.2.0",
+    "@azure/storage-blob": "^12.26.0",
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7"
+  }
 }
