--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^20.x",
-    "rimraf": "^5.0.0",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
+    "rimraf": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   },
@@ -24,6 +25,7 @@
     "@azure/cosmos": "^4.2.0",
     "@azure/storage-blob": "^12.26.0",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7"
   }
 }
