--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.x",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
@@ -26,6 +27,7 @@
     "@azure/storage-blob": "^12.26.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "multer": "^1.4.5-lts.1"
   }
 }
